# vjson-schema

./: .gitignore  CMakeLists.txt  README.md  errors.c  errors.h  main.c  parse.c  parse.h  validate.cpp  validate.h
example/: invalid.json  schema.json  valid.json
src/: main.cpp  validator.cpp  validator.hpp
